# sam2-studio

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: backend-validation.md  export-guide.md  features.md  implementation-status.md  installation.md  licenses.md  modernization-plan.md  performance.md  playback-profile.md  release.md  video-segmentation-tutorial.md
src/sam2_studio/: __init__.py
src/sam2_studio/app/: main.py  settings.py
src/sam2_studio/engine/: __init__.py  backend.py  ultralytics_sam2.py  workers.py
src/sam2_studio/export/: __init__.py  mask_exporter.py
src/sam2_studio/interaction/: __init__.py  prompts.py
src/sam2_studio/media/: __init__.py  cache.py  decoder.py  source.py
src/sam2_studio/session/: __init__.py  project.py  session.py
src/sam2_studio/tools/: __init__.py  release_smoke.py  segment_smoke.py
src/sam2_studio/ui/: __init__.py  canvas.py  main_window.py  playback_bar.py
tests/: test_app_main.py  test_backend.py  test_exporter.py  test_media_source.py  test_project.py  test_prompts.py  test_workers.py
