[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam2-studio"
version = "0.1.0"
description = "Modern PySide6 studio for Ultralytics SAM2 mask generation."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["sam2", "segmentation", "pyside6", "ultralytics", "mask"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "pyside6",
    "safetensors",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
]

[project.scripts]
sam2-studio = "sam2_studio.app.main:main"
sam2-studio-segment-smoke = "sam2_studio.tools.segment_smoke:main"
sam2-studio-release-smoke = "sam2_studio.tools.release_smoke:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
